--- a/WebContent/material.xhtml
+++ b/WebContent/material.xhtml
@@ -50,6 +50,8 @@
     	<h:outputText value="#{materialManageBean.material.ID}"></h:outputText>
     	
     	<p:commandButton value="Edit" id="nonAjax" action="#{materialManageBean.showMaterialEditPage}" ajax="false" />
+    	<p:commandButton value="Go back" id="nonAjax1" action="#{companyManageBean.showCompanyMaterials}" ajax="false" />
+    	
 
 </h:panelGrid>
 </p:outputPanel>
