--- a/WebContent/companies.xhtml
+++ b/WebContent/companies.xhtml
@@ -27,6 +27,8 @@
     	</p:commandLink>
     </p:column>
 </p:dataTable>
+
+<p:commandButton value="Restore original data" id="nonAjax1" action="#{companyManageBean.restoreData}" ajax="false" />
 </h:form>
 </h:body>
 
