--- a/WebContent/companyMaterials.xhtml
+++ b/WebContent/companyMaterials.xhtml
@@ -7,7 +7,7 @@
 
 <f:view>
   <h:head>
-   <title><ui:insert name="title">insert title</ui:insert></title>
+   <title><ui:insert name="title">Company materials</ui:insert></title>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-type" />
    <link type = "text/css"  rel="stylesheet" href="/your/theme/skin.css" />
    </h:head>
