--- a/WebContent/companies.xhtml
+++ b/WebContent/companies.xhtml
@@ -5,9 +5,11 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui">
     
-       <f:metadata>
-          <f:event type="preRenderView" listener="#{companyManageBean.checkForRestore}"/>
-      </f:metadata>
+<h:outputStylesheet name="css/style.css" />     
+    
+<f:metadata>
+      <f:event type="preRenderView" listener="#{companyManageBean.checkForRestore}"/>
+</f:metadata>
 
 <f:view>
   <h:head>
