--- a/WebContent/editMaterial.xhtml
+++ b/WebContent/editMaterial.xhtml
@@ -5,6 +5,8 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui">
 
+<h:outputStylesheet name="css/style.css" />   
+
 <f:view>
   <h:head>
    <title><ui:insert name="title">Edit Material</ui:insert></title>
