--- a/WebContent/material.xhtml
+++ b/WebContent/material.xhtml
@@ -5,6 +5,7 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui">
 
+<h:outputStylesheet name="css/style.css" />   
 <f:view>
   <h:head>
    <title><ui:insert name="title">Material details</ui:insert></title>
